kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
apiVersion: v1
metadata:
  name: easyshop
  labels:
    app: easyshop
    environment: production
