kubernetes/09-easyshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyshop-service
  namespace: easyshop
spec:
  selector:
    app: easyshop
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
